# project-3-

./: .gitignore  ARCHITECTURE.md  Dockerfile  pyproject.toml  render.yaml  run_scheduler.py
.github/workflows/: weekly-pulse.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
groww_pulse/: __init__.py  api.py  config.py  filter_english_reviews.py  lang_filter.py  llm_groq.py  llm_openai.py  llm_openrouter.py  main.py  phase1.py  phase2.py  phase3.py  phase4.py  pii.py  retry_network.py
web/: package-lock.json  package.json  tsconfig.json
web/.next/: trace
web/.next/cache/webpack/client-development/: index.pack.gz.old
web/.next/cache/webpack/server-development/: index.pack.gz.old
web/.next/server/: server-reference-manifest.json
web/app/: page.tsx
